# teamoflow-pip-test

./: .gitignore  pyproject.toml
src/TeAMOFlow/: __init__.py
src/TeAMOFlow/Matrix Factorization/: __init__.py
src/TeAMOFlow/mf/: __init__.py  benchmarking_ML.py  matrix_factorization.py
src/TeAMOFlow/nn/: __init__.py  test_mf_import.py
