[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teamoflow"
version = "0.0.15"
authors = [
  { name="andrew_jy", email="andrewjych@gmail.com" },
]
description = "A tensorflow 2.X-based matrix factorization framework, particularly for the matching of query-key pairs (item recommendations for users)."
readme = "README.md"
license = { file="" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GitHubOfAndrew/teamoflow-pip-test"
"Bug Tracker" = "https://github.com/GitHubOfAndrew/teamoflow-pip-test/issues"